--- a/ibsen.css
+++ b/ibsen.css
@@ -10,7 +10,7 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.direction .hover{
+.direction:hover{
     background-color: aquamarine;
     color: blue;
 }
