--- a/ibsen.css
+++ b/ibsen.css
@@ -54,59 +54,10 @@ h4:hover{
     text-shadow: 1px 1px 2px #1c3897, 0 0 1em #6ed65a, 0 0 0.2em #861958;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.bottom-navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color:grey;
-    color: white;
-    padding: 10px;
-    left: 0;
-    bottom: 0;
+.img{
+    height: 20px;
 }
 
-.bottom-navbar a {
-    text-decoration: none;
-    color: white;
-    margin: 0 10px;
-}
-
-.bottom-navbar a:hover {
-    text-decoration: underline;
+img{
+    height: 320px;
 }
